@@ -15,6 +15,8 @@ Version 0.11.1-dev
 
 Not yet released.
 
+- #188: Provides metadata as well as normal data in JSONP responses.
+
 Version 0.11.0
 --------------
 
